@@ -1,4 +1,13 @@
 =====================================
+2009-08-26T15:36:33.809144Z plg-1_301
+=====================================
+
+  2009-08-26 15:32:01 (r2646) by rcaputo
+  polo-gtk/lib/POE/Loop/Gtk.pm M; polo-gtk/Makefile.PL M
+
+    Add POE::Test::Loops to configure_requires and build_requires.
+
+=====================================
 2009-08-26T02:34:39.613499Z plg-1_300
 =====================================
 
